# rasbian_installer

./: System.map-4.4.0-1-rpi2  config-4.4.0-1-rpi2  config.txt  installer-config.txt  kernel-rpi1_install.img  kernel-rpi2_install.img  post-install.txt
mods/: CMakeLists.txt
scripts/: install_backend  install_default  install_rame  install_rame_backend  install_userland  install_webrtc
